<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="#FFCCBC"> 

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_frag_4"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_ke_sembilan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_buka_9" />

    <Button
        android:id="@+id/btn_ke_sepuluh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_buka_10" />

</LinearLayout>
